src/test/deca/context/valid/sansObjet/IntWithDivide2.deca
{
    int x = 20;
    x = 20/6;
    print(x);
}