src/test/deca/context/invalid/sansObjet/BadIntWithMult.deca
{
    int x = 20;
    x = 20*0.6;
    print(x);
}